# call-me-maybe

./: .gitignore  Makefile  README.md  pyproject.toml
data/input/: function_calling_tests.json  functions_definition.json
llm_sdk/llm_sdk/: __init__.py
src/: __main__.py  arguments.py  llm.py  logging.py
src/config/: logging.py  settings.py
src/core/: constraints.py  custom_types.py  llm.py
src/exceptions/: base.py  loader.py  schema.py  storage.py
src/exceptions/json_engine/: lexer.py  parser.py
src/io/: loader.py  reader.py  writer.py
src/json_engine/: lexer.py  parser.py
src/llm_client/: formatters.py  inference.py  llm_client.py
src/models/: definition.py  function_call.py  prompt.py
src/storage/: loader.py  writer.py
src/utils/: array.py  timer.py
