[project]
name = "call-me-maybe"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "pydantic>=2.12.5",
    "llm_sdk",
    "regex>=2026.2.28",
    "accelerate>=1.13.0",
]

[tool.uv.sources]
llm_sdk = { workspace = true }

[tool.uv.workspace]
members = [
  "llm_sdk"
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.19.1",
]

[[tool.mypy.overrides]]
module = "regex.*"
ignore_missing_imports = true
